--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,45 +2,48 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [main]
+
+permissions:
+  pages: write
+  id-token: write
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
-
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
+    
     steps:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Setup Bun
-      uses: oven-sh/setup-bun@v1
+    # Install Node.js (for React) instead of Bun
+    - name: Setup Node
+      uses: actions/setup-node@v4
       with:
-        bun-version: latest
+        node-version: 20.x
 
+    # Install dependencies
     - name: Install dependencies
-      run: bun install
-
-    - name: Build
-      run: bun run build
+      run: npm ci
+      
+    # Add this critical step for React
+    - name: Build React app
+      run: |
+        npm run build --if-present
+        # Add MIME type workaround
+        echo "*.js text/javascript" > build/.gitattributes
+        echo "*.wasm application/wasm" >> build/.gitattributes
 
     - name: Setup Pages
       uses: actions/configure-pages@v4
-
+      
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
-        path: ./dist
+        path: build  # Changed from ./dist to build
 
     - name: Deploy to GitHub Pages
       id: deployment
