--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,49 +2,53 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [main]
-
-permissions:
-  pages: write
-  id-token: write
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    
+
     steps:
-    - name: Checkout
+    ◦ name: Checkout
+
       uses: actions/checkout@v4
 
-    # Install Node.js (for React) instead of Bun
-    - name: Setup Node
-      uses: actions/setup-node@v4
+    ◦ name: Setup Bun
+
+      uses: oven-sh/setup-bun@v1
       with:
-        node-version: 20.x
+        bun-version: latest
 
-    # Install dependencies
-    - name: Install dependencies
-      run: npm ci
-      
-    # Add this critical step for React
-    - name: Build React app
-      run: |
-        npm run build --if-present
-        # Add MIME type workaround
-        echo "*.js text/javascript" > build/.gitattributes
-        echo "*.wasm application/wasm" >> build/.gitattributes
+    ◦ name: Install dependencies
 
-    - name: Setup Pages
+      run: bun install
+
+    ◦ name: Build
+
+      run: bun run build
+
+    ◦ name: Setup Pages
+
       uses: actions/configure-pages@v4
-      
-    - name: Upload artifact
+
+    ◦ name: Upload artifact
+
       uses: actions/upload-pages-artifact@v3
       with:
-        path: build  # Changed from ./dist to build
+        path: ./dist
 
-    - name: Deploy to GitHub Pages
+    ◦ name: Deploy to GitHub Pages
+
       id: deployment
       uses: actions/deploy-pages@v4
