--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,35 +20,28 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
-    ◦ name: Checkout
-
+    - name: Checkout
       uses: actions/checkout@v4
 
-    ◦ name: Setup Bun
-
+    - name: Setup Bun
       uses: oven-sh/setup-bun@v1
       with:
         bun-version: latest
 
-    ◦ name: Install dependencies
-
+    - name: Install dependencies
       run: bun install
 
-    ◦ name: Build
-
+    - name: Build
       run: bun run build
 
-    ◦ name: Setup Pages
-
+    - name: Setup Pages
       uses: actions/configure-pages@v4
 
-    ◦ name: Upload artifact
-
+    - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
         path: ./dist
 
-    ◦ name: Deploy to GitHub Pages
-
+    - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
